--- a/docs/freecad/index.org
+++ b/docs/freecad/index.org
@@ -1,7 +1,7 @@
 #+#+TITLE: Let's use FreeCAD
 #+EMAIL: rzr@gna.org
 #+OPTIONS: toc:1
-#+REVEAL_ROOT: http://cdn.jsdelivr.net/reveal.js/3.0.0/
+#+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.8.0/
 #+REVEAL_HLEVEL: 1
 #+REVEAL_THEME: moon
 #+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil"))))
