--- a/index.org
+++ b/index.org
@@ -1,23 +1,24 @@
-#+TITLE: Phil Coval <purl.org/rzr>
+#+TITLE: Phil Coval
+#+AUTHOR: <https://purl.org/rzr/>
 #+EMAIL: rzr@users.sf.net
-#+OPTIONS: toc:1
-#+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.8.0/
-#+REVEAL_HLEVEL: 1
-#+REVEAL_THEME: moon
 #+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil, timestamp:nil"))))
-{{{tags-on-export}}}
+#+OPTIONS: num:nil, timestamp:nil, toc:nil
+#+REVEAL_HLEVEL: 1
+#+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.8.0/
+#+#+REVEAL_SLIDE_FOOTER: <div style='bottom: 0%; position: fixed; width: 100%; align: center; text-align: center;"><a href="https://purl.org/rzr/">https://purl.org/rzr/</a></div>
+#+REVEAL_THEME: night
 
-* Index:
+* Contacts
+  - https://purl.org/rzr/
+  - https://mastodon.social/@rzr
+  - [[https://jwchat.org/][xmpp:rzr@jabber.org]]
+  - mailto:rzr@users.sf.net
 
-  - [[./docs/freecad/]] : 2016 @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
-  - [[./docs/gstreamer/]] : 2016 @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
-  - [[./docs/org-reveal/]]: 2016 @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] : [[./docs/org-reveal/index.html?print-pdf][(Print)]]
-  - [[./docs/iot-robot/]]: 2020 @ [[https://fosdem.org/2020/schedule/event/iotnuttx/#][#FOSDEM]] : [[./docs/iot-robot/index.html?print-pdf][(Print)]]
-  - [[./docs/web-of-twins/]]: 2020 @ [[https://fosdem.org/2020/schedule/event/web-of-twins/#][#FOSDEM]] : [[./docs/web-of-twins/index.html?print-pdf][(Print)]]
+* [[./docs/index.org][Presentations' slides]]
 
-* Resources:
-
-  - https://rzr.github.io/rzr-presentations/
-  - https://github.com/rzr/rzr-presentations/
-  - https://speakerdeck.com/rzr/
-  - https://www.slideshare.net/rzrfreefr/
+* More
+  - https://rzr.online.fr/
+  - [[https://webchat.freenode.net/][irc:irc.freenode.net/#iot]] (/msg RzR !)
+  - https://twitter.com/@RzrFreeFr
+  - https://www.openhub.net/accounts/rzr
+  - https://github.com/sponsors/rzr
