--- a/docs/index.org
+++ b/docs/index.org
@@ -10,12 +10,16 @@
 
 * RzR's Presentations
 
-  - [[./twins/][Twins]] @ [[http://techinn.vitrecommunaute.bzh/#][#TIV20]] 2020 ([[./twins/index.html?print-pdf][print]])
-  - [[./iot-robot/][Making an IoT Robot]] @ [[https://fosdem.org/2020/schedule/event/iotnuttx/#][#FOSDEM]] 2020 ([[./iot-robot/index.html?print-pdf][print]])
-  - [[./web-of-twins/][Web Of Twins]] @ [[https://fosdem.org/2020/schedule/event/web_of_twins/#][#FOSDEM]] 2020 ([[./web-of-twins/index.html?print-pdf][print]])
+  - [[./abandonware/][Abandonware]] @ [[https://www.breizhcamp.org/conference/programme/][#BreizhCamp]] [[https://twitter.com/RzrFreeFr/status/1243569839886696451#BreizhCamp#][2020]] ([[./abandonware/index.html?print-pdf][print]])
+  - [[./twins/][Twins]] @ [[http://techinn.vitrecommunaute.bzh/#][#TIV20]] [[https://twitter.com/RzrFreeFr/status/1230800219228573697#Tiv20][2020]] ([[./twins/index.html?print-pdf][print]])
+  - [[./iot-robot/][Making an IoT Robot]] @ [[https://fosdem.org/2020/schedule/event/iotnuttx/#][#FOSDEM]] [[https://mastodon.social/@rzr/103595181296044323][2020]] ([[./iot-robot/index.html?print-pdf][print]])
+  - [[./web-of-twins/][Web Of Twins]] @ [[https://fosdem.org/2020/schedule/event/web_of_twins/#][#FOSDEM]] [[https://twitter.com/RzrFreeFr/status/1224388409004896256][2020]] ([[./web-of-twins/index.html?print-pdf][print]])
+  - 2019 and earlier:
+    - https://www.slideshare.net/rzrfreefr/
+
   - [[./gstreamer/][GStreamer]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] 2016 ([[./gstreamer/index.html?print-pdf][print]])
-  - [[./freecad/][FreeCAD]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] 2016 ([[./freecad/index.html?print-pdf][print]])
-  - [[./org-reveal/][Org Reveal.js]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] 2016 ([[./org-reveal/index.html?print-pdf][print]])
+  - [[./freecad/][FreeCAD]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]] ([[./freecad/index.html?print-pdf][print]])
+  - [[./org-reveal/][Org Reveal.js]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]] ([[./org-reveal/index.html?print-pdf][print]])
 
 * Resources:
 
@@ -26,3 +30,6 @@
   - https://www.slideshare.net/rzrfreefr/
   - https://wiki.tizen.org/User:Pcoval
   - https://github.com/sponsors/rzr
+
+
+
