--- a/docs/index.org
+++ b/docs/index.org
@@ -10,16 +10,72 @@
 
 * RzR's Presentations
 
-  - [[./abandonware/][Abandonware]] @ [[https://www.breizhcamp.org/conference/programme/][#BreizhCamp]] [[https://twitter.com/RzrFreeFr/status/1243569839886696451#BreizhCamp#][2020]] ([[./abandonware/index.html?print-pdf][print]])
-  - [[./twins/][Twins]] @ [[http://techinn.vitrecommunaute.bzh/#][#TIV20]] [[https://twitter.com/RzrFreeFr/status/1230800219228573697#Tiv20][2020]] ([[./twins/index.html?print-pdf][print]])
-  - [[./iot-robot/][Making an IoT Robot]] @ [[https://fosdem.org/2020/schedule/event/iotnuttx/#][#FOSDEM]] [[https://mastodon.social/@rzr/103595181296044323][2020]] ([[./iot-robot/index.html?print-pdf][print]])
-  - [[./web-of-twins/][Web Of Twins]] @ [[https://fosdem.org/2020/schedule/event/web_of_twins/#][#FOSDEM]] [[https://twitter.com/RzrFreeFr/status/1224388409004896256][2020]] ([[./web-of-twins/index.html?print-pdf][print]])
-  - 2019 and earlier:
+  - [[./abandonware/][Abandonware]]
+    [[./abandonware/index.html?print-pdf][@]]
+    [[https://www.breizhcamp.org/conference/programme/][#BreizhCamp]]
+    [[https://twitter.com/RzrFreeFr/status/1243569839886696451#BreizhCamp#][2020]]
+  - [[./twins/][Twins]]
+    [[./twins/index.html?print-pdf][@]]
+    [[http://techinn.vitrecommunaute.bzh/#][#TIV20]]
+    [[https://twitter.com/RzrFreeFr/status/1230800219228573697#Tiv20][2020]]
+  - [[./iot-robot/][Making an IoT Robot]]
+    [[./iot-robot/index.html?print-pdf][@]]
+    [[https://fosdem.org/2020/schedule/event/iotnuttx/#][#FOSDEM]]
+    [[https://mastodon.social/@rzr/103595181296044323][2020]]
+  - [[./web-of-twins/][Web Of Twins]]
+    [[./web-of-twins/index.html?print-pdf][@]]
+    [[https://fosdem.org/2020/schedule/event/web_of_twins/#][#FOSDEM]]
+    [[https://twitter.com/RzrFreeFr/status/1224388409004896256][2020]]
+  - [[https://archive.fosdem.org/2019/schedule/event/project_things/][Mozilla Things]]
+    @
+    [[https://archive.fosdem.org/2019/schedule/speaker/philippe_coval/][#FOSDEM]]
+    [[https://twitter.com/rafspiny/status/1091699571904925696][2019]]
+  - 2020 and earlier (@ [[https://www.slideshare.net/SamsungOSG/][Samsung OSG]], IoT)
     - https://www.slideshare.net/rzrfreefr/
 
-  - [[./gstreamer/][GStreamer]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] 2016 ([[./gstreamer/index.html?print-pdf][print]])
-  - [[./freecad/][FreeCAD]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]] ([[./freecad/index.html?print-pdf][print]])
-  - [[./org-reveal/][Org Reveal.js]] @ [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]] [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]] ([[./org-reveal/index.html?print-pdf][print]])
+* 2018 @ Samsung OSG
+
+  - [[https://www.slideshare.net/SamsungOSG/the-complex-iot-equation-and-floss-solutions-101449596][IoT / FLOSS]]
+    [[https://www.invidio.us/watch?v=QSuiBNi8iws][@]]
+    [[https://ow2con18.sched.com/speaker/philippe.coval][OW2]]
+    [[https://twitter.com/ow2/status/998911725033443328#ow2con][2018]]
+  - [[https://www.slideshare.net/SamsungOSG/easy-iot-with-javascript][IoT / JS]] @ CampOSV 2018
+  - [[https://www.slideshare.net/SamsungOSG/tizen-rt-a-lightweight-rtos-platform-for-lowend-iot-devices][TizenRT]] @ FOSDEM
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-smart-home-to-automotive-and-beyond][IoTivity beyond]] @ ID4CAR
+
+* 2017 @ Samsung OSG
+
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-for-automotive-metaocfautomotive-tutorial][OCF automotive]] @ LFALS 2017
+  - [[https://www.slideshare.net/SamsungOSG/genivi-ocf-cooperation][GENIVI OCF]] @ GAMM 2017
+  - [[https://www.slideshare.net/SamsungOSG/framework-for-iot-interoperability][IoTivity sensors]] @ OSIS 2017
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-for-automotive-iot-interoperability][IoTivity Automotive]] @ Rennes 2017
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-from-devices-to-the-cloud-71867171][IoTivity ArtikCloud]] @ FOSDEM 2017
+
+* 2016 @ Samsung OSG, OCF
+
+  - [[https://www.slideshare.net/SamsungOSG/iot-from-arduino-microcontrollers-to-tizen-products-using-iotivity][IoTivity Arduino]] @ WTB 2016
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-tutorial-prototyping-iot-devices-on-gnulinux][Iotivity GNU/Linux]] @ LFELC 2016
+  - [[https://www.slideshare.net/SamsungOSG/development-boards-for-tizen-iot][Tizen Dev boards]] @ LFELC 2016
+  - [[https://www.slideshare.net/SamsungOSG/toward-ocf-automotive-profile][OCF AGL]] @ AGLMM 2016
+  - [[https://www.slideshare.net/SamsungOSG/tizen-connected-with-iotivity][Tizen IoTivity]] @ FOSDEM 2016
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-connects-the-genivi-demo-platform-to-tizen][OCF GDP]] @ GAMM 2016
+  - [[https://www.slideshare.net/SamsungOSG/iotivity-on-tizen-how-to][IoTivity on Tizen]] @ OpenIoT 2016
+
+* 2016 @ Community
+
+  - [[./gstreamer/][GStreamer]]
+    [[./gstreamer/index.html?print-pdf][@]]
+    [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
+    [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]]
+  - [[./freecad/][FreeCAD]]
+    [[./freecad/index.html?print-pdf][@]]
+    [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
+    [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]]
+  - [[./org-reveal/][Org Reveal.js]]
+    [[./org-reveal/index.html?print-pdf][@]]
+    [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
+    [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]]
+
 
 * Resources:
 
@@ -30,6 +86,3 @@
   - https://www.slideshare.net/rzrfreefr/
   - https://wiki.tizen.org/User:Pcoval
   - https://github.com/sponsors/rzr
-
-
-
