iot-robot: Add video record
Change-Id: I1384b9ecdb2fd3762ddd1f56a8ae4573db6d9e39
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/iot-robot/index.org
+++ b/docs/iot-robot/index.org
@@ -229,3 +229,6 @@ $ curl -H "Content-Type: application/json" \
 
 #+ATTR_HTML: :width 50% :align middle
 [[https://opensourcedesign.net/images/events/fosdem.svg]]
+* Video playback
+  @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm"></video>@@
+
