web-of-twins: Add video record
Change-Id: Id860a1608b0b62bc7eff57b728a7c3cb715172b4
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/web-of-twins/index.org
+++ b/docs/web-of-twins/index.org
@@ -218,3 +218,6 @@ $ x-www-browser http://localhost:42080/aframe/
 
 [[https://opensourcedesign.net/images/events/fosdem.svg]]
 
+* Video playback
+
+  @@html:<video controls src="https://video.fosdem.org/2020/H.1302/web_of_twins.webm"></video>@@
