--- a/docs/index.org
+++ b/docs/index.org
@@ -76,7 +76,13 @@
     [[http://afgral.org/grafiklabor-2016#][#GrafikLabor]]
     [[https://twitter.com/RzrFreeFr/status/748492466815283200][2016]]
 
+* Extras
 
+  - [[./digital-twin/][Digital Twins]]
+    [[./digital-twin/index.html?print-pdf][@]]
+    [[https://www.ow2con.org/view/2020/Program?year=2020&event=OW2con20#][#Ow2Con]]
+    [[https://twitter.com/RzrFreeFr/status/1261249575580577792][2020]]
+  
 * Resources:
 
   - https://purl.org/rzr/
