index: Confirm mastodon link
Change-Id: I8b3e4d102ec7fb0c9ca8bc9589f1b2cfb31ea242
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/index.org
+++ b/index.org
@@ -18,7 +18,7 @@
 
 * Follow
 
-  - https://mastodon.social/@rzr (Fediverse)
+  - @@html:<a rel="me" href="https://mastodon.social/@rzr">https://mastodon.social/@rzr</a>@@ (Fediverse)
   - https://purl.org/rzr/videos (Peertube)
   - https://github.com/rzr
   - https://purl.org/rzr/youtube (Live Videos)
