--- a/docs/iot-robot/index.org
+++ b/docs/iot-robot/index.org
@@ -35,7 +35,7 @@
 
   #+ATTR_REVEAL: :frag (fade-in)
   - This talk is not about:
-    - State of the art in Robotics 
+    - State of the art in Robotics
     - Hard real time on critical systems
   - It's about experimenting:
     - Prototyping a "Web of Twins"
@@ -79,7 +79,7 @@
    #+BEGIN_leftcol
    [[https://files.mastodon.social/media_attachments/files/024/464/695/original/affef1e1810b17eb.jpg#./file/sg90.jpg]]
    - Angle is controlled by a PWM signal
-   - SG90: 9g Micro Servo 
+   - SG90: 9g Micro Servo
      - Angle: [-90°, +90°]
      - I/O: Power: 4.8V, GND, PWM
    #+END_leftcol
@@ -153,7 +153,7 @@ https://mastodon.social/@rzr/103561362661539026# :SG09:
 :END:
    #+ATTR_REVEAL: :frag (fade-in)
    - Only CPU STM32F7 was supported
-   - Added patches for new Nulceo-F767ZI board
+   - Added patches for new Nucleo-F767ZI board
    - Mapping inspired by STM32F103:
      - GPIO, ADC, PWM, ROMFS...
    - Released in nuttx-7.31
@@ -162,10 +162,10 @@ https://mastodon.social/@rzr/103561362661539026# :SG09:
    :reveal_background: https://files.mastodon.social/media_attachments/files/024/610/074/original/a5898e3f7667d2d1.png
    :reveal_background_opacity: 0.3
    :END:
-    #+ATTR_REVEAL: :frag (fade-in)  
+    #+ATTR_REVEAL: :frag (fade-in)
    - Added native module for stm32f7nucleo
      - inspired by ref board SMT32F4 discovery
-   - webthing-iotjs module to expose resources 
+   - webthing-iotjs module to expose resources
      - REST API (uses iotjs-express module)
      - Mozilla IoT schema (in JSON)
 
@@ -187,7 +187,7 @@ $ curl http://192.168.0.42:8888
    "description":"Rotary actuator on /dev/pwm2" (...)
    "links":[{"rel":"property","href":"/properties/arm" (...)
 
-$ curl http://192.168.0.42:8888/properties 
+$ curl http://192.168.0.42:8888/properties
 {"torso":0,"shoulder":0,"arm":0,"hand":0}
 
 $ curl -H "Content-Type: application/json" \
@@ -205,7 +205,7 @@ $ curl -H "Content-Type: application/json" \
 
 * Web of Twins demo
 
-@@html:<video controls src="https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4" autoplay="false" loop="true"></video>@@
+@@html:<video controls src="https://peertube.mastodon.host/download/videos/5bee0c53-e856-49f3-9d30-35fce28d8a42-720.mp4" autoplay="false" loop="false"></video>@@
 
 * Resources
   :PROPERTIES:
@@ -230,5 +230,5 @@ $ curl -H "Content-Type: application/json" \
 #+ATTR_HTML: :width 50% :align middle
 [[https://opensourcedesign.net/images/events/fosdem.svg]]
 * Video playback
-  @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm"></video>@@
+  @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm" autoplay="false" loop="false"></video>@@
 
