gstreamer: Disable timestamps (rendering date)
Change-Id: I7f3a61d9f967d8d57d75fd235dbe065d55fe1aa9
Signed-off-by: Philippe Coval <rzr@users.sf.net>

--- a/docs/gstreamer/index.org
+++ b/docs/gstreamer/index.org
@@ -1,6 +1,7 @@
 #+TITLE: Using Gstreamer
 #+EMAIL: rzr@users.sf.net
 #+OPTIONS: toc:1
+#+OPTIONS: timestamp:nil.
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@3.8.0/
 #+REVEAL_HLEVEL: 1
 #+REVEAL_THEME: moon
